# menhera-ddns

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/web/: index.html  main.css  main.js
