[package]
name = "menhera-ddns"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MPL-2.0"
description = "a small HTTP-to-DNS dynamic update service"
repository = "https://github.com/menhera-org/menhera-ddns"

[dependencies]
base32 = "0.5"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
fqdn = "0.5"
base64 = "0.22"
hmac = "0.13"
sha2 = "0.11"
rand = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hickory-client = { version = "0.25", features = ["dnssec-aws-lc-rs"] }
futures-util = "0.3"
